# koreatown-sidewalk-accessibility

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
data/interim/: koreatown_aoi.geojson  koreatown_aoi.metadata.json  koreatown_aoi_transit_buffer.geojson
data/processed/: alley_sidewalks_clean.geojson  cleaning_stats.json  crosswalks_clean.geojson  driveways_clean.geojson  intersections_clean.geojson  ramps_clean.geojson  sidewalk_area_boundary_clean.geojson  streets_centerline_clean.geojson  transit_stops_clean.geojson
data/raw/: navigate_la_157_crosswalks.geojson  navigate_la_157_crosswalks.metadata.json  navigate_la_300_intersections.geojson  navigate_la_300_intersections.metadata.json  navigate_la_318_access_ramps.geojson  navigate_la_318_access_ramps.metadata.json  navigate_la_319_alley_sidewalk.geojson  navigate_la_319_alley_sidewalk.metadata.json  navigate_la_320_curbs.metadata.json  navigate_la_321_driveways.geojson  navigate_la_321_driveways.metadata.json  navigate_la_322_parkways.metadata.json  navigate_la_323_sidewalks.metadata.json  (+4 more)
docs/: data_sources.md  environment_notes.md  index.html  labeling_logic.md  manual_download_instructions.md  methodology.md  portfolio_summary.md  qgis_instructions.md
notebooks/: 01_exploration.ipynb
outputs/qgis/: koreatown_aoi.gpkg
src/: __init__.py  arcgis.py  build_aoi.py  build_labels.py  clean_geometries.py  config.py  download_data.py  make_maps.py  pipeline.py  process_gtfs.py  process_sidewalk_assets.py  qa_report.py
tests/: test_cleaning.py  test_config.py  test_outputs.py
(+9 files in other folders)
