[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "koreatown-sidewalk-accessibility"
version = "0.1.0"
description = "QGIS-ready heuristic sidewalk accessibility dataset for Koreatown, Los Angeles."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "geopandas>=1.1.3",
  "pandas>=3.0.3",
  "shapely>=2.1.2",
  "pyogrio>=0.12.1",
  "requests>=2.32",
  "pyproj>=3.7",
  "matplotlib>=3.9",
  "networkx>=3.4",
  "folium>=0.17",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

